--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,5 +35,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/articulos/nuevo, roles: ROLE_ADMIN }
+        - { path: ^/articulo/editar, roles: ROLE_ADMIN }
+        - { path: ^/categoria/nueva, roles: ROLE_ADMIN }
+        - { path: ^/categoria/editar, roles: ROLE_ADMIN }
