--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
-        "friendsofsymfony/jsrouting-bundle": "^2.6",
+        "friendsofsymfony/jsrouting-bundle": "^2.7",
         "knplabs/knp-paginator-bundle": "^5.3",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
@@ -31,6 +31,7 @@
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/security-csrf": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/string": "5.1.*",
         "symfony/translation": "5.1.*",
