added filter price and admin user

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,3 +40,5 @@ security:
         - { path: ^/articulo/editar, roles: ROLE_ADMIN }
         - { path: ^/categoria/nueva, roles: ROLE_ADMIN }
         - { path: ^/categoria/editar, roles: ROLE_ADMIN }
+        - { path: ^/administrador, roles: ROLE_ADMIN }
+
