--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,4 +41,6 @@ security:
         - { path: ^/categoria/nueva, roles: ROLE_ADMIN }
         - { path: ^/categoria/editar, roles: ROLE_ADMIN }
         - { path: ^/administrador, roles: ROLE_ADMIN }
+        - { path: ^/pagar, roles: ROLE_USER }
+
 
