--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,7 +19,10 @@ DirectoryIndex index.php
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
-
+    RewriteCond %{HTTP_HOST} ^https://hjshop.herokuapp.com/$ [NC,OR]
+    RewriteCond %{HTTP_HOST} ^https://hjshop.herokuapp.com/$
+    RewriteCond %{REQUEST_URI} !public/
+    RewriteRule (.*) /public/$1 [L]
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
